[tool.poetry]
name = "eapexpand"
version = "0.1.0"
description = "Simple EAP file expansion tool"
authors = ["Geoff Low <glow@mdsol.com>"]
readme = "README.md"
packages = [
    {include = "eapexpand", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
dataclasses-json = "^0.5.7"
mdb-parser = "^0.0.3"

[tool.poetry.scripts]
expand="eapexpand.cli:main"

[tool.poetry.group.linkml.dependencies]
linkml = "^1.5.5"

[tool.poetry.group.shapes.dependencies]
rdflib = "^6.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
