[tool.poetry]
name = "eapexpand"
version = "0.1.0"
description = "Simple EAP file expansion tool"
authors = ["Geoff Low <glow@mdsol.com>"]
readme = "README.md"
packages = [
    {include = "eapexpand", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
dataclasses-json = "^0.6.4"
mdb-parser = "^0.0.3"
linkml-model = "^1.7.0"
linkml = "^1.7.4"
python-dotenv = "^1.0.1"
oaklib = "^0.6.16"
inflect = "^7.3.1"
black = "^24.8.0"
dictdiffer = "^0.9.0"
linkml-renderer = "^0.3.1"

[tool.poetry.scripts]
expand="eapexpand.cli:main"
load_usdm="eapexpand.cli:load_usdm"
diff="eapexpand.helpers.linkml_diff:main"

[tool.poetry.group.shapes.dependencies]
rdflib = "^6.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
